fix overflow movil

--- a/FRONTEND-ISU/src/index.css
+++ b/FRONTEND-ISU/src/index.css
@@ -16,3 +16,12 @@ body,
 body {
   display: block;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  overflow-x: hidden;
+  max-width: 100%;
+}
